--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: hdwallet_service
-description: Hdwallet service for wallet. 
+name: qmrmb_hdwallet_service
+description: Qmrmb hdwallet service for wallet.
 version: 0.1.18
 repository: https://github.com/laicj2025/hdwallet-service
 
